<!--
  ~ Copyright © 2018-2020 TopOn. All rights reserved.
  ~ https://www.toponad.com
  ~ Licensed under the TopOn SDK License Agreement
  ~ https://github.com/toponteam/TopOn-Android-SDK/blob/master/LICENSE
  -->

<resources>
    <string name="app_name">TopOn SDK Demo</string>

    <string name="anythink_sdk_demo">TopOn Sdk Demo</string>

    <string name="anythink_title_rewarded_video">Rewarded Video</string>
    <string name="anythink_title_interstitial">Interstitial</string>
    <string name="anythink_title_splash">Splash</string>
    <string name="anythink_title_banner">Banner</string>
    <string name="anythink_title_native">Native</string>
    <string name="anythink_title_native_express">Native List</string>
    <string name="anythink_title_native_list">Native List</string>
    <string name="anythink_title_native_draw">Native Draw</string>
    <string name="anythink_title_native_patch">Native Patch</string>

    <string name="anythink_native_self">Native SelfRender</string>
    <string name="anythink_native_express">Native Express</string>
    <string name="anythink_native_list">Native list</string>
    <string name="anythink_native_refresh_list">Native Refresh list</string>
    <string name="anythink_native_draw">Vertical Draw Video</string>
    <string name="anythink_native_patch">Paster Video</string>

    <string name="anythink_title_fullscreen">FullScreen</string>
    <string name="anythink_title_draw">Vertical Draw Video</string>
    <string name="anythink_title_patch">Pre-roll</string>

    <string name="anythink_main_desc_rewarded_video">Users can engage with a video ad in exchange for in-app rewards.</string>
    <string name="anythink_main_desc_interstitial">Include Interstitial and FullScreen.Appears at natural breaks or transition points.</string>
    <string name="anythink_main_desc_splash">Displayed immediately after the application is launched.</string>
    <string name="anythink_main_desc_banner">Flexible formats which could appear at the top, middle or bottom of your app.</string>
    <string name="anythink_main_desc_native">Include Native,Vertical Draw Video and Pre-roll Ads.Most compatible with your native app code for video ads and graphic ads.</string>

    <string name="anythink_load_ad">Load Ad</string>
    <string name="anythink_is_ad_ready">Is Ad Ready</string>
    <string name="anythink_show_ad">Show Ad</string>
    <string name="anythink_select_network">Select Network</string>

    <string name="anythink_click_to_copy_device_id">Copy Gaid: %s</string>
    <string name="anythink_sdk_version">TopOn SDK: %s</string>
    <string name="anythink_ad_status_loading">loadAd</string>
    <string name="anythink_ad_status_not_load">ad is not load.</string>
</resources>
