<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.test.ad.demo.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/anythink_45dp" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"
        android:background="@color/anythink_F5F5F5"
        android:padding="@dimen/anythink_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/nativeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white"
                android:padding="@dimen/anythink_8dp">

                <LinearLayout
                    android:id="@+id/ll_native"
                    android:layout_width="@dimen/anythink_pic_size"
                    android:layout_height="@dimen/anythink_pic_size"
                    android:background="@drawable/shape_gray_width1_corners2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_native"
                        android:layout_width="@dimen/anythink_pic_width"
                        android:layout_height="@dimen/anythink_pic_height"
                        android:src="@mipmap/ic_test_native" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/anythink_title_margin_left"
                    android:layout_toRightOf="@id/ll_native"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_native"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anythink_native_self"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/anythink_title_size" />

<!--                    <TextView-->
<!--                        android:id="@+id/tv_desc_native"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_below="@id/tv_title_native"-->
<!--                        android:layout_alignLeft="@id/tv_title_native"-->
<!--                        android:layout_marginTop="@dimen/anythink_desc_margin_top"-->
<!--                        android:maxLines="3"-->
<!--                        android:text="@string/anythink_main_desc_native"-->
<!--                        android:textColor="@color/anythink_666666"-->
<!--                        android:textSize="@dimen/anythink_desc_size" />-->
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nativeExpressBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/anythink_10dp"
                android:background="@drawable/bg_white"
                android:padding="@dimen/anythink_8dp">

                <LinearLayout
                    android:id="@+id/ll_native_express"
                    android:layout_width="@dimen/anythink_pic_size"
                    android:layout_height="@dimen/anythink_pic_size"
                    android:background="@drawable/shape_gray_width1_corners2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_native_express"
                        android:layout_width="@dimen/anythink_pic_width"
                        android:layout_height="@dimen/anythink_pic_height"
                        android:src="@mipmap/ic_test_native" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/anythink_title_margin_left"
                    android:layout_toRightOf="@id/ll_native_express"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_native_express"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anythink_native_express"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/anythink_title_size" />

<!--                    <TextView-->
<!--                        android:id="@+id/tv_desc_native_express"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_below="@id/tv_title_native"-->
<!--                        android:layout_alignLeft="@id/tv_title_native"-->
<!--                        android:layout_marginTop="@dimen/anythink_desc_margin_top"-->
<!--                        android:maxLines="3"-->
<!--                        android:text="@string/anythink_main_desc_native"-->
<!--                        android:textColor="@color/anythink_666666"-->
<!--                        android:textSize="@dimen/anythink_desc_size" />-->
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nativeListBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/anythink_10dp"
                android:background="@drawable/bg_white"
                android:padding="@dimen/anythink_8dp">

                <LinearLayout
                    android:id="@+id/ll_native_List"
                    android:layout_width="@dimen/anythink_pic_size"
                    android:layout_height="@dimen/anythink_pic_size"
                    android:background="@drawable/shape_gray_width1_corners2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_native_List"
                        android:layout_width="@dimen/anythink_pic_width"
                        android:layout_height="@dimen/anythink_pic_height"
                        android:src="@mipmap/ic_test_native" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/anythink_title_margin_left"
                    android:layout_toRightOf="@id/ll_native_List"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_native_List"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anythink_native_list"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/anythink_title_size" />

<!--                    <TextView-->
<!--                        android:id="@+id/tv_desc_native_List"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_below="@id/tv_title_native"-->
<!--                        android:layout_alignLeft="@id/tv_title_native"-->
<!--                        android:layout_marginTop="@dimen/anythink_desc_margin_top"-->
<!--                        android:maxLines="3"-->
<!--                        android:text="@string/anythink_main_desc_native"-->
<!--                        android:textColor="@color/anythink_666666"-->
<!--                        android:textSize="@dimen/anythink_desc_size" />-->
                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>